// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot testing > Default 1`] = `
<button
  aria-label="Default"
  class="group flex flex-col justify-center  min-w-[110px] items-center gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-bg-gray flex items-center justify-center text-black hover:text-accent material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-button-sm text-black group-hover:text-accent group-hover:underline"
  >
    Default
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, non-selected 1`] = `
<button
  aria-label="Disabled, non-selected"
  class="group flex flex-col justify-center  min-w-[110px] items-center gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-bg-gray flex items-center justify-center text-black hover:text-accent material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-button-sm text-black group-hover:text-accent group-hover:underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 1`] = `
<button
  aria-label="Disabled, non-selected"
  class="group flex flex-col justify-center  min-w-[110px] items-center gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-accent flex items-center justify-center text-white material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > Disabled, selected 2`] = `
<button
  aria-label="Disabled, non-selected"
  class="group flex flex-col justify-center  min-w-[110px] items-center gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-accent flex items-center justify-center text-white material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Disabled, non-selected
  </span>
</button>
`;

exports[`Snapshot testing > selected 1`] = `
<button
  aria-label="Selected"
  class="group flex flex-col justify-center  min-w-[110px] items-center gap-2"
  type="button"
>
  <span
    aria-hidden="true"
    class="size-[72px] rounded-full bg-accent flex items-center justify-center text-white material-symbols-outlined size-48 select-none"
  >
    target
  </span>
  <span
    class="text-button-sm text-accent group-hover:text-accent group-hover:underline"
  >
    Selected
  </span>
</button>
`;
